--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+@media screen and (max-width: 600px);
+
+
 footer {
-    background-color: black;
+    display: grid;
+    grid-template-rows: 1fr;
+    background-color: grey;
+    height: 100px;
 }
+
+
+
+nav ul li {
+    align-items: center;
+    float: left;
+    list-style: none;
+}
+
+nav ul li a {
+    display: block;
+    padding: 0 10px;
+    line-height: 40px;
+}
+
+
