--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 @media screen and (max-width: 600px);
 
+html,body {
+    padding: 0;
+    margin: 0;
+}
 
 footer {
-    display: grid;
-    grid-template-rows: 1fr;
-    background-color: grey;
-    height: 100px;
+    display: flex;
+    background-color: #F76C6C;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 50px;
+    position:absolute;
+    width: 100%;
+    bottom: 0;
 }
 
 
-
-nav ul li {
-    align-items: center;
-    float: left;
-    list-style: none;
-}
-
-nav ul li a {
-    display: block;
-    padding: 0 10px;
-    line-height: 40px;
+a {
+    margin-top: 15px;
+    font-size: 20px;
 }
 
 
