--- a/style.css
+++ b/style.css
@@ -1,45 +1,50 @@
-@media screen and (max-width: 600px);
+@media screen and (max-width: 600px) {
 
 
 
 
-html,
-body {
-    margin: 0;
-    padding: 0;
-}
+    html,
+    body {
+        margin: 0;
+        padding: 0;
+        background: whitesmoke;
+    }
 
-input {
-    display: flex;
-    width: 80px;
-    height: 20px;
-    justify-content: end;
-    background: #F08080;
-    border-width: 0.5px;
-    border-color: lightgrey;
-}
+    input {
+        display: flex;
+        width: 80px;
+        height: 20px;
+        background: #F08080;
+        border-width: 0.5px;
+        border-color: lightgrey;
+        margin: 10px;
 
-button {
-    height: 30px;
-    width: 30px;
-    text-align: justify;
-    background-color: #F76C6C;
-    border-width: 0;
-}
+    }
 
-#loupe {
-    width: 20px;
-    height: 20px;
-}
+    button {
+        height: 30px;
+        width: 30px;
+        text-align: justify;
+        background-color: #F76C6C;
+        border-width: 0;
+        padding: 15px;
+    }
 
-#logo {
-    width: 30px;
-    height: 30px;
-    justify-content: center;
-}
+    #loupe {
+        width: 15px;
+        height: 15px;
+    }
 
-header {
-    display: grid;
-    grid-template-columns: 1.9fr 1fr repeat(3, 0.1fr);
-    background: #F76C6C;
+    #logo {
+        width: 30px;
+        height: 30px;
+        justify-content: center;
+        padding: 10px;
+    }
+
+    header {
+        display: grid;
+        grid-template-columns: 1fr repeat(3, 0.1fr);
+        background: #F76C6C;
+    }
 }
