--- a/style.css
+++ b/style.css
@@ -1,24 +1,37 @@
-@media screen and (max-width: 600px);
-
-html,body {
-    padding: 0;
-    margin: 0;
-}
-
-footer {
-    display: flex;
-    background-color: #F76C6C;
-    flex-direction: row;
-    justify-content: space-around;
-    height: 55px;
-    position:absolute;
-    width: 100%;
-    bottom: 0;
-}
+@media screen and (max-width: 600px) {
 
 
-a img {
-    margin: 1em;
-    width: 30px;
-    height: 30px;
+    #container {
+        position: relative;
+        min-height: 100%;
+        padding-bottom: 20px;
+    }
+
+
+
+
+    html body {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+    }
+
+    footer {
+        display: flex;
+        background-color: #F76C6C;
+        flex-direction: row;
+        justify-content: space-around;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+    }
+
+
+    a img {
+        margin: 1em;
+        width: 30px;
+        height: 30px;
+    }
 }
