--- a/style.css
+++ b/style.css
@@ -26,6 +26,15 @@ body {
 
 }
 
+.auteur {
+    text-align: right;
+    color: gray;
+    font-family: var(--font-texte);
+
+    font-size: var(--font-size-text);
+
+}
+
 h1 {
 
     font-size: 24px;
@@ -203,6 +212,12 @@ h3 {
     display: none;
 
 }
+
+#dernierArticleDetails {
+    padding-bottom: 50px;
+}
+
+
 
 @media screen and (min-width: 800px) {
 
