--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 
 }
 
+
 .auteur {
     text-align: right;
     color: gray;
@@ -80,7 +81,7 @@ header {
     padding: 0;
     top: 0;
     align-items: center;
-
+    max-height: 70px;
 }
 
 footer {
@@ -269,5 +270,10 @@ h3 {
 
     p {
         font-size: 20px;
+    }
+
+    .firstdayimg {
+        width: 300px;
+        height: 300px;
     }
 }
