--- a/style.css
+++ b/style.css
@@ -26,22 +26,12 @@ body {
 
 }
 
-
-.auteur {
-    text-align: right;
-    color: gray;
-    font-family: var(--font-texte);
-
-    font-size: var(--font-size-text);
-
-}
-
 h1 {
 
     font-size: 24px;
     font-family: 'Bodoni Moda';
     min-width: 160px;
-    color: rgba(0, 0, 0, 255);
+    color: rgba(0,0,0,255);
     text-align: center;
     margin-right: 40px;
 
@@ -81,7 +71,7 @@ header {
     padding: 0;
     top: 0;
     align-items: center;
-    max-height: 70px;
+
 }
 
 footer {
@@ -214,12 +204,6 @@ h3 {
 
 }
 
-#dernierArticleDetails {
-    padding-bottom: 50px;
-}
-
-
-
 @media screen and (min-width: 800px) {
 
     body,
@@ -263,23 +247,16 @@ h3 {
         height: 70px;
         padding: 100px;
     }
-
     h3 {
-        font-size: 30px;
+        font-size:30px ;
     }
-
     p {
-        font-size: 20px;
+        font-size:20px ;
     }
-
-    .firstdayimg {
-        width: 300px;
-        height: 300px;
-    }
-
     .Image{
         width: 500px;
         height: 300px;
+        object-fit: cover;
     }
     .card-title{
         font-size: 15px;
@@ -328,4 +305,3 @@ h3 {
         border-radius: 3px;
     }
 }   
-}
