--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 html,
 body {
     display: flex;
@@ -260,10 +261,9 @@ h3 {
     }
     .card-title{
         font-size: 15px;
+        display:flex;
+        align-items: center;
     }
-    h4{
-        text-align: center;
-        font-family: var(--font-titre);
     }
     .carousel-items {
         display: flex;
@@ -305,9 +305,3 @@ h3 {
         border-radius: 3px;
     }
 }   
-
-    .firstdayimg {
-        width: 300px;
-        height: 300px;
-    }
-}
