--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 html,
 body {
     display: flex;
@@ -32,7 +31,7 @@ h1 {
     font-size: 24px;
     font-family: 'Bodoni Moda';
     min-width: 160px;
-    color: rgba(0,0,0,255);
+    color: rgba(0, 0, 0, 255);
     text-align: center;
     margin-right: 40px;
 
@@ -248,60 +247,68 @@ h3 {
         height: 70px;
         padding: 100px;
     }
+
     h3 {
-        font-size:30px ;
+        font-size: 30px;
     }
+
     p {
-        font-size:20px ;
+        font-size: 20px;
     }
-    .Image{
+
+    .Image {
         width: 500px;
         height: 300px;
         object-fit: cover;
     }
-    .card-title{
+
+    .card-title {
         font-size: 15px;
-        display:flex;
+        display: flex;
         align-items: center;
     }
-    }
-    .carousel-items {
-        display: flex;
-        overflow-x: scroll;
-        padding: 1rem 0;
-    }
-    .carousel-item {
-        margin-left: 1rem;
-    }
-    .carousel-item {
-        flex-grow: 1;
-        flex-shrink: 0;
-        flex-basis: 450px;
-        margin-left: 1rem;
-    }
-    .carousel-items {
-        display: flex;
-        overflow-x: scroll;
-        padding: 1rem 0;
-        scroll-snap-type: x mandatory;
-    }
-    
-    .carousel-item {
-        flex: 1 0 250px;
-        margin-left: 1rem;
-        scroll-snap-align: start;
-    }
-    ::-webkit-scrollbar-track {
-        background-color: #D5D2C8;
-    }
-    
-    ::-webkit-scrollbar {
-        height: 6px;
-        background-color: #D3D3D3;
-    }
-    
-    ::-webkit-scrollbar-thumb {
-        background-color: #3d4852;
-        border-radius: 3px;
-    }
-}   
+}
+
+.carousel-items {
+    display: flex;
+    overflow-x: scroll;
+    padding: 1rem 0;
+}
+
+.carousel-item {
+    margin-left: 1rem;
+}
+
+.carousel-item {
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 450px;
+    margin-left: 1rem;
+}
+
+.carousel-items {
+    display: flex;
+    overflow-x: scroll;
+    padding: 1rem 0;
+    scroll-snap-type: x mandatory;
+}
+
+.carousel-item {
+    flex: 1 0 250px;
+    margin-left: 1rem;
+    scroll-snap-align: start;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #D5D2C8;
+}
+
+::-webkit-scrollbar {
+    height: 6px;
+    background-color: #D3D3D3;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #3d4852;
+    border-radius: 3px;
+}
