--- a/style.css
+++ b/style.css
@@ -127,10 +127,6 @@ p {
     font-size: var(--font-size-text);
 }
 
-summary {
-    padding-top: 50px;
-}
-
 details>summary {
 
     list-style: none;
@@ -269,16 +265,6 @@ h3 {
     }
 }
 
-.carousel-items {
-    display: flex;
-    overflow-x: scroll;
-    padding: 1rem 0;
-}
-
-.carousel-item {
-    margin-left: 1rem;
-}
-
 .carousel-item {
     flex-grow: 1;
     flex-shrink: 0;
@@ -311,4 +297,14 @@ h3 {
 ::-webkit-scrollbar-thumb {
     background-color: #3d4852;
     border-radius: 3px;
+}
+.carousel{
+    padding-top: 50px;
+}
+.fa-angle-right{
+    color: var(--second-color);
+    border: 3px solid;
+    border-radius: 50%;
+    width: 1.2rem;
+    height: 1.2rem;
 }
