--- a/style.css
+++ b/style.css
@@ -48,8 +48,18 @@ button {
 }
 
 #loupe {
-    width: 25px;
+    width: 30px;
 
+}
+.Image {
+    width: 500px;
+    height: 300px;
+    object-fit: cover;
+}
+.card-title {
+    font-size: 15px;
+    display: flex;
+    align-items: center;
 }
 
 #logo {
