--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1 {
     min-width: 160px;
     color: rgba(0, 0, 0, 255);
     text-align: center;
-    margin-right: 40px;
+    
 
 }
 
@@ -48,9 +48,13 @@ button {
 }
 
 #loupe {
-    width: 30px;
-
+    width: 40px;
 }
+#boutonLoupe {
+    padding-right: 50px;
+    padding-bottom: 40px;
+}
+
 .Image {
     width: 500px;
     height: 300px;
@@ -245,13 +249,12 @@ h3 {
 
     h1 {
         font-size: 40px;
-        padding-right: 190px;
     }
 
     #logo {
         width: 70px;
         height: 70px;
-        padding: 100px;
+        
     }
 
     h3 {
