--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1 {
     min-width: 160px;
     color: rgba(0, 0, 0, 255);
     text-align: center;
-    
+
 
 }
 
@@ -48,18 +48,19 @@ button {
 }
 
 #loupe {
-    width: 40px;
+    width: 50px;
+    height: 50px;
+    text-align: start;
 }
-#boutonLoupe {
-    padding-right: 50px;
-    padding-bottom: 40px;
-}
+
+
 
 .Image {
     width: 500px;
     height: 300px;
     object-fit: cover;
 }
+
 .card-title {
     font-size: 15px;
     display: flex;
@@ -254,7 +255,7 @@ h3 {
     #logo {
         width: 70px;
         height: 70px;
-        
+
     }
 
     h3 {
